[tool.poetry]
name = "asyncalchemy"
version = "1.0.0"
description = "A thin async wrapper for SQLAlchemy sessions."
authors = ["Shaul Kramer <shaulkr@gmail.com>", "Guy Zylberberg <guyzyl@gmail.com>", "Claroty Open Source <opensource@claroty.com>"]
license = "Apache-2.0"
homepage = "https://github.com/claroty/AsyncAlchemy"
documentation = "https://github.com/claroty/AsyncAlchemy"


[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3.0"


[tool.poetry.dev-dependencies]
mypy = "^0.790"
pylint = "^2.6"


[tool.pylint.message_control]
disable = [
    "missing-module-docstring",
]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
